/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Filipe Frances
 */
package ucf.assignments;
import java.io.BufferedReader;
import java.io.BufferedWriter;
import java.io.File;

public class FileHandler{
    private File getDirectory(){
        //get storage file directory
        return null;
    }

    public BufferedReader getReader(String path){
        //create new buffered reader from string file path
        return null;
    }

    public BufferedWriter getWriter(){
        // create a new buffered writer from string file path
        return null;
    }
}