/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Filipe Frances
 */
package ucf.assignments;
import javafx.fxml.FXML;

public class ListOptCtrl{

    @FXML
    protected void completedButtonClicked(){
       ;
    }

    @FXML
    protected void incompleteButtonClicked(){
        ;
    }

    @FXML
    protected void allButtonClicked(){
        ;
    }


    @FXML
    protected void returnToListsButtonClicked(){
        ;
    }

    @FXML
    protected void completeBoxChecked(){
        ;
    }

    @FXML
    protected void editButtonClicked(){
      ;
    }

    @FXML
    protected void newButtonClicked() {
        ;
    }

    @FXML
    protected void deleteButtonClicked() {
        ;
    }
}